samples/_failures_safe/1761693281_213914_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0958476.c: In function ‘main’:
./samples/SAFE/__tmp_e0958476.c:162:12: error: missing terminating " character
  162 |     printf("
      |            ^
./samples/SAFE/__tmp_e0958476.c:162:5: error: expected expression at end of input
  162 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_e0958476.c:162:5: error: expected declaration or statement at end of input
